--- a/5._World_Wide_Express/package.json
+++ b/5._World_Wide_Express/package.json
@@ -6,12 +6,21 @@
     "showappcontent": "cat *.js"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "node-fetch": "^3.0.0"
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
     "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.24.2"
-  }
+  },
+  "name": "5._world_wide_express",
+  "version": "1.0.0",
+  "main": "app.js",
+  "type": "module",
+  "module": "commonjs",
+  "author": "jp",
+  "license": "ISC",
+  "description": ""
 }
