--- a/7._Mandatory_1/package.json
+++ b/7._Mandatory_1/package.json
@@ -1,18 +1,11 @@
 {
-  "scripts": {
-    "start-dev": "cross-env PORT=8080 nodemon app.js",
-    "megascript": "ls && ls",
-    "showdirectorycontent": "ls",
-    "showappcontent": "cat *.js"
-  },
-  "dependencies": {
-    "express": "^4.17.1",
-    "node-fetch": "^3.0.0"
-  },
-  "devDependencies": {
-    "cross-env": "^7.0.3",
-    "eslint": "^7.32.0",
-    "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-plugin-import": "^2.24.2"
-  }
+    "dependencies": {
+        "express": "^4.17.1",
+        "jquery": "^3.6.0",
+        "jsdom": "^16.5.3",
+        "nodemailer": "^6.6.0"
+    },
+    "devDependencies": {
+        "cross-env": "^7.0.3"
+    }
 }
