--- a/10._Mandatory_2/package.json
+++ b/10._Mandatory_2/package.json
@@ -1,19 +1,25 @@
 {
-  "name": "10._mandatory_2",
+  "name": "13._mandatory_2_working_progress",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
-  "devDependencies": {
-    "eslint": "^8.3.0",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.25.3"
-  },
   "dependencies": {
-    "express": "^4.17.1"
+    "bcrypt": "^5.0.1",
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "express-rate-limit": "^5.5.1",
+    "express-session": "^1.17.2",
+    "helmet": "^4.6.0",
+    "nodemailer": "^6.7.2",
+    "sqlite": "^4.0.23",
+    "sqlite3": "^5.0.2",
+    "toastr": "^2.1.4"
   }
 }
